# first-rust-api

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2021-09-26-160257_users/: up.sql
src/: main.rs
src/api/: mod.rs  status.rs  users.rs
src/api/data/: controller.rs  mod.rs  serializers.rs
src/api/hello/: controller.rs  controllers.rs  mod.rs
src/api/index/: controller.rs  serializers.rs
src/api/stream/: controller.rs
src/api/user/: controller.rs  serializers.rs
src/database/: mod.rs
src/models/: users.rs
