[package]
name = "web_server"
version = "0.1.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.130"
serde_json = "1.0.67"
dotenv = "0.15.0"
diesel = {version = "1.4.4", features = ["postgres", "r2d2", "uuidv07"]}
r2d2_postgres = "0.18.1"
env_logger = "0.9.0"
sha256 = "1.0.2"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
